# arc-core

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  LICENSE.txt  README.md  build.rs
.github/: dependabot.yml
.github/workflows/: ffi-unit-test.yml  occt-ffi-unit-test.yml  occt-unit-test.yml  stale.yml
ci/: ffi.Dockerfile  occt.Dockerfile
ci/scripts/: ffi.sh  occt.sh
src/: build.rs  lib.rs  main.rs
src/ffi/: point.rs
src/occt/: CMakeLists.txt  point.cpp
src/occt/include/: point.hpp
src/wrappers/: point.rs
test/occt/: CMakeLists.txt  point-test.cpp
tests/: point_test.rs
tests/occt/: CMakeLists.txt  point-test.cpp
tests/wrappers/: point-test.rs
